unpackaged/main/default/objects/ERS_Case_Guidance_Success_Mapping__mdt/ERS_Case_Guidance_Success_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ERS Case Guidance Success Mapping</label>
    <pluralLabel>ERS Case Guidance Success Mappings</pluralLabel>
</CustomObject>