unpackaged/main/default/objects/ERS_Case_Guidance_Success_Mapping__mdt/fields/Case_Guidance_Success_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Guidance_Success_Status__c</fullName>
    <label>Case Guidance Success Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>