unpackaged/main/default/objects/ERS_Case_Guidance_Success_Mapping__mdt/fields/Flat_Tire_Status__c.field-meta.xml
<CustomField>
    <fullName>Flat_Tire_Status__c</fullName>
    <label>Flat Tire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has Spares</fullName>
            </value>
            <value>
                <fullName>No Spares</fullName>
            </value>
            <value>
                <fullName>Air Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>