unpackaged/main/default/objects/ERS_Case_Guidance_Success_Mapping__mdt/fields/Guidance_Success__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Success__c</fullName>
    <label>Guidance Success</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>