unpackaged/main/default/objects/ERS_Case_Guidance_Success_Mapping__mdt/fields/Name_of_Triage_Tab__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Triage_Tab__c</fullName>
    <inlineHelpText>Triage tab on which the script needs to be displayed.</inlineHelpText>
    <label>Name of Triage Tab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Home Lockout</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Member/Contact</fullName>
            </value>
            <value>
                <fullName>Tow</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Flat Tire</fullName>
            </value>
            <value>
                <fullName>Extrication</fullName>
            </value>
            <value>
                <fullName>Vehicle Lockout</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
                <isActive>false</isActive>
                <label>Accident</label>
            </value>
            <value>
                <fullName>Bicycle</fullName>
                <isActive>false</isActive>
                <label>Bicycle</label>
            </value>
            <value>
                <fullName>Lockout</fullName>
                <isActive>false</isActive>
                <label>Lockout</label>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
                <isActive>false</isActive>
                <label>Motorcycle</label>
            </value>
            <value>
                <fullName>RV</fullName>
                <isActive>false</isActive>
                <label>RV</label>
            </value>
            <value>
                <fullName>Submit</fullName>
                <isActive>false</isActive>
                <label>Submit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>