unpackaged/main/default/objects/ERS_Case_Guidance_Success_Mapping__mdt/fields/Vehicle_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Fuel_Type__c</fullName>
    <label>Vehicle Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>EV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>